[package]
name = "acp-bridge"
version = "0.2.0"
edition = "2021"
description = "ACP adapter for local AI — bridges any OpenAI-compatible API (Ollama, LocalAI, vLLM, llama.cpp, LM Studio) to Agent Client Protocol"
license = "MIT"
repository = "https://github.com/BlakeHung/acp-bridge"
keywords = ["acp", "ollama", "local-ai", "agent-client-protocol", "openab"]
categories = ["command-line-utilities"]

[lib]
name = "acp_bridge"
path = "src/lib.rs"

[[bin]]
name = "acp-bridge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
axum = "0.8"
hyper = "1"
futures-lite = "2"
